--- a/index.html
+++ b/index.html
@@ -45,6 +45,11 @@
             <div class="convivaSearchIcon"></div>
           </button>
         </div>
+        <div class="convivaChatDisclaimer">
+          <p>
+            You’re chatting with our AI-powered agent.  By continuing, you agree that any chats, including any personal information entered, are subject to our <a href="https://www.conviva.ai/legal/#Privacy-Policy">Privacy Policy</a> and may be recorded and shared with our service providers so we can better assist you and used for marketing purposes.
+          </p>
+        </div>
       </div>
     </div>
     <div class="hideContainer" data-id="convivaAIChatBubble" onclick="doOpenConvivaAIChatWindow()">
